# Instant-Output

./: ADMIN_FEATURES_PROPOSAL.md  ADMIN_FEATURES_PROPOSAL_V2.md  AI_CARD_SETUP.md  ENV_SETUP_GUIDE.md  ENV_VARIABLES.md  IMPLEMENTATION_ROADMAP.md  JAPANESE_TRANSLATION_AUTO.md  NEXT_STEPS.md  PREMIUM_ENABLE_GUIDE.md  PREMIUM_IMPLEMENTATION.md  PRICING_500YEN_ANALYSIS.md  PRICING_STRATEGY.md  README.md  RUST_WASM_ANALYSIS.md  RUST_WASM_PLAN.md  SUBSCRIPTION_AUTH_DESIGN.md  SUBSCRIPTION_IMPLEMENTATION_STATUS.md  TRANSLATION_IMPROVEMENT.md  UI_LIBRARY_PROPOSAL.md  VERCEL_ENV_SETUP.md  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/courses/: page.tsx
components/: AudioPlaybackButton.tsx  CardEditor.tsx  ConfirmDialog.tsx  ErrorDialog.tsx  GlobalVoiceInputButton.tsx  InfiniteScrollSentinel.tsx  LoadingSpinner.tsx  MenuButton.tsx  MessageDialog.tsx  ThemeProvider.tsx  ThemeToggle.tsx  VocabularyWordEditor.tsx  VoiceClipboard.tsx  VoiceInputButton.tsx  VoiceInputModal.tsx
contexts/: VoiceInputContext.tsx
hooks/: useBatchCardSelection.ts  useInfiniteScroll.ts
lib/: admin-auth-server.ts  admin-auth.ts  auth-server.ts  auth.ts  auto-grading.ts  export-import.ts  highlight.tsx  language-detection.ts  learning-modes.ts  learning.ts  lessons.ts  ocr.ts  premium.ts  reviews.ts  seed.ts  srs-config.ts  statistics.ts  storage.ts  templates.ts  text-processing.ts  tts.ts  vocabulary.ts  voice-clipboard.ts
public/: manifest.json
types/: ai-card.ts  models.ts  modes.ts
wasm-ocr/: Cargo.toml
wasm-ocr/src/: lib.rs
(+37 files in other folders)
