[package]
name = "wasm-ocr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["ImageData", "CanvasRenderingContext2d", "HtmlImageElement", "HtmlCanvasElement"] }
image = "0.24"
base64 = "0.21"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true

